--- a/Exercise 3.html
+++ b/Exercise 3.html
@@ -35,11 +35,13 @@
 
     <p>YOUR BROKE!!!</p>
 
-    <button>Back to Top</button>
+    <button id ="back to top">
+   <a href ="#">Back to Top</a>
+    </button>
 
        </center>
 
-       <a href = "https://lifechoices.co.za/"> <img src ="Images/logo_429x991-262x60.png"></a>
+       <a href = "https://lifechoices.co.za/" target ="_blank"> <img src ="Images/logo_429x991-262x60.png"></a>
 
 
     
