--- a/Exercise 1.html
+++ b/Exercise 1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first web page at Life Choices</title>
 
-    <link rel="stylesheet" href="Exercise 1.css">
+    <link rel="stylesheet" href="exercise 1.css">
 </head>
 
 
